--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "main": "server/server.js",
   "scripts": {
-    "pretest": "jshint ."
+    "pretest": "jshint .",
+    "start": "node server/server.js",
+    "test": "NODE_ENV=localtest mocha --timeout 60000  'test/**/*spec*.js' --reporter nyan"
   },
   "dependencies": {
+    "async": "^1.5.0",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "errorhandler": "^1.1.1",
@@ -20,7 +23,11 @@
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
-    "jshint": "^2.5.6"
+    "chai": "~2.1.0",
+    "jshint": "^2.8.0",
+    "loopback-testing": "^1.2.0",
+    "mocha": "~1.21.4",
+    "supertest": "~0.13.0"
   },
   "repository": {
     "type": "",
