create capture method

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -38,8 +38,8 @@
     "dataSource": "db",
     "public": false
   },
-  "tagGame": {
+  "TagGame": {
     "dataSource": "db",
-    "public": false
+    "public": true
   }
 }
