--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "loopback-connector-es": "^1.0.2",
     "loopback-connector-mongodb": "^1.13.0",
     "loopback-datasource-juggler": "^2.19.0",
-    "serve-favicon": "^2.0.1"
+    "parse": "^1.6.8",
+    "serve-favicon": "^2.0.1",
+    "underscore": "^1.8.3"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
