--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
   "bugs": {
     "url": "https://github.com/captag/tags/issues"
   },
-  "homepage": "https://github.com/captag/tags#readme"
+  "homepage": "https://github.com/captag/tags#readme",
+  "engines": {
+    "node": "5.0.0",
+    "npm": "2.1.x"
+  }
 }
